--- a/styles/_cart.scss
+++ b/styles/_cart.scss
@@ -148,15 +148,6 @@
     margin: 0;
   }
 
-  &__input {
-    border: 1px solid #A4A4A4;
-    font-weight: 300;
-    font-size: 13px;
-    line-height: 16px;
-    color: #B1B1B1;
-    padding: 12px 17px;
-  }
-
   &__btn {
     border-radius: 0;
     color: #575757;
@@ -216,4 +207,12 @@
     line-height: 19px;
     color: #222222;
   }
+}
+.input {
+  border: 1px solid #A4A4A4;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #B1B1B1;
+  padding: 12px 17px;
 }
