--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,7 +10,7 @@ $grey: #9f9f9f;
 $gray-dark: #5d5d5d;
 $btn-close-width: 12px;
 
-$enable-grid-classes: false;
+$enable-grid-classes: true;
 $enable-cssgrid: true;
 $paragraph-margin-bottom: 0;
 $navbar-dark-toggler-icon-bg: url(@/images/navbar/burger.svg);
